force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Allow_Auto_Renew_Override__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Allow_Auto_Renew_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables/Disables the Partner to Override the Contract Auto Renew field value.</description>
    <label>Allow Auto Renew Override</label>
    <type>Checkbox</type>
</CustomField>