force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Contract_Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Contract_Auto_Renew__c</fullName>
    <description>Controls if a contract for this product is Auto Renewed or not.</description>
    <label>Contract Auto Renew</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>