force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Derived_Price_Products_Fee__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Derived_Price_Products_Fee__c</fullName>
    <inlineHelpText>Denotes the partner’s percent of net pricing, which is calculated as a percentage of contributing license fees (where applicable)</inlineHelpText>
    <label>Derived Price Products Fee %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>