force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__PNR__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__PNR__c</fullName>
    <label>PNR %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>