force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Product_Description__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Product_Description__c</fullName>
    <label>Product Description</label>
    <type>TextArea</type>
</CustomField>