force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Quantity_Minimum__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Quantity_Minimum__c</fullName>
    <description>This field will store the minimum quantity that a product have</description>
    <inlineHelpText>While placing an order, quantity should be greater than or equal to minimum quantity specified for a given product.</inlineHelpText>
    <label>Quantity Minimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>