force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Standard_Partner_Pricebook_Entry__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Standard_Partner_Pricebook_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The standard partner pricebook entry.</description>
    <label>Standard Partner Pricebook Entry</label>
    <referenceTo>CHANNEL_ORDERS__Partner_Pricebook_Entry__c</referenceTo>
    <relationshipLabel>Partner Product Catalog</relationshipLabel>
    <relationshipName>Partner_Product_Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>