force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Status__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Retired (Add-ons Only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>