force-app/main/default/objects/CHANNEL_ORDERS__Partner_Product_Catalog__c/fields/CHANNEL_ORDERS__Unit_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Unit_Price_Formula__c</fullName>
    <formula>IF(TEXT(CHANNEL_ORDERS__Pricing_Type__c) == &apos;FIXED&apos;,  TEXT(CHANNEL_ORDERS__Fixed_Price__c), $Label.channel_orders__COA_unitPrice_multiple)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price</label>
    <type>Text</type>
</CustomField>